# pointcloudCSTable

./: .gitignore  CMakeLists.txt  MCMCAdjust.cpp  MCMCAdjust.h  README.md  bruteForceMethod.cpp  bruteForceMethod.h  cloudPFConfig.h  cloudParticle.cpp  cloudParticle.h  cognitiveSubtraction.cpp  cognitiveSubtraction.h  config.h  cylinderCloudParticle.cpp  cylinderCloudParticle.h  cylinderFitting.cpp  cylinderFitting.h  icp.cpp  icp.h  innermodelManager.cpp  innermodelManager.h  main.cpp  myViewer.cpp  myViewer.h  outlierExtraction.cpp  outlierExtraction.h  particleFilter.h  qmatrot.cpp  qrtmat.cpp  qvec.cpp  rectprismCloudParticle.cpp  rectprismCloudParticle.cpp~  rectprismCloudParticle.h  rectprismCloudParticle.h~  rectprismFitting.cpp  rectprismFitting.h  rectprismFitting.h~  serializableMatrix.h  worker.h
QMat/: QMatAll  qmat.cpp  qmat.h  qmatrot.h~  qrtmat.h  qvec.h
data/: cloud_cup.pcd  dataR1.pcd  dataR2.pcd  dataR4.pcd  dataR5.pcd  dataR6.pcd  dataR7.pcd  dataV1.pcd  dataV2.pcd  dataV4.pcd  dataV5.pcd  dataV6.pcd  dataV7.pcd
de0/: CMakeLists.txt  bruteForceMethod.cpp  bruteForceMethod.h  innermodelManager.cpp  innermodelManager.h  main.cpp  myViewer.cpp  myViewer.h  rectprismFitting.cpp  rectprismFitting.h
de0/osgviewer/: osgview.cpp  osgview.h
de0/scenarios/: cubePointCloud.xml
de0/shapes/: rectprism.cpp  rectprism.cpp~  rectprism.h~
osgviewer/: adapterwidget.h
scenarios/: cubePointCloud.xml  genericPointCloud.xml
shapes/: codes.h  rectprism.cpp  rectprism.cpp~  rectprism.h  rectprism.h~
test/: CMakeLists.txt  polytoped.cpp
